<resources>
    <string name="app_name">SkhuGlocalitAndroidProject</string>
    <string name="ip_address">13.124.93.48</string>
    <string name="LS">Login_Success</string>
    <string name="LF">Login_Fail</string>
    <string name="JS">Join_Success</string>
    <string name="JF">Join_Fail</string>
    <string name="E">Error</string>
    <string name="Login_Success">로그인 되었습니다</string>
    <string name="Login_Fail">학번이나 비밀번호를 잘못입력하셨습니다</string>
    <string name="Join_Success">회원가입 완료</string>
    <string name="Auto_Login">자동로그인 되었습니다</string>
    <string name="Check_Success">사용할 수 있는 학번입니다</string>
    <string name="Check_Fail">입력된 학번은 사용중입니다. 확인 후 관리자에게 문의해주세요</string>
    <string name="Check_Error">중복확인을 해주세요</string>
    <string name="ID_Error">학번 9자리를 입력해주세요</string>
    <string name="Pw_Error">비밀번호를 입력해주세요</string>
    <string name="Pw_Check_Error">비밀번호가 일치하지 않습니다</string>
    <string name="Name_Error">이름을 입력해주세요</string>
    <string name="Email_Error">정확한 E-mail주소를 입력해주세요</string>
    <string name="Join_ing">회원가입 중\n완료가 될 때 까지 대기해주세요</string>
    <string name="title_activity_book_dream_main">BookDreamMainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="homefragment_title">나의 현황 및 새로운 소식</string>
    <string name="enter_id">학번 입력</string>
    <string name="enter_pw">비밀번호 입력</string>
    <string name="iog_in">LOG IN</string>
    <string name="joining">회원가입</string>
    <string name="find_info">ID/PW찾기</string>
    <string name="writing">글 쓰기</string>
    <string name="refresh">새로고침</string>
    <string name="title">과목</string>
    <string name="type">타입</string>
    <string name="user">글쓴이</string>
    <string name="renting">DREAM</string>
    <string name="giving">나눠주기</string>
    <string name="state">책 상태</string>
    <string name="uploading">갤러리</string>
    <string name="content">글 내용</string>
    <string name="photo">사진 찍기</string>
    <string name="want_period">필요기간</string>
    <string name="request">DREAM 신청하기</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name ="home_title">나의 정보</string>
    <string name="info_content">책 정보</string>
    <string name="title_prompt">과목을 선택하세요.</string>
    <string name="period_prompt">필요 기간을 선택하세요.</string>
    <string name="demand_content">해당 과목 전공 서적에 대해 설명을 써주세요. (최대 50자)\n\n\n\n\n\n\n\n\n\n\n\n\n</string>
    <string name="message">완료 버튼을 누르면 더 이상 알람은 오지 않습니다. \n 이 점 유의하시고 내용 확인해주세요.</string>
    <string name="mailContent">문의할 내용을 써주세요. (최대 50자)\n\n\n\n\n\n\n\n\n\n\n\n\n</string>
    <string name="madeBy">\n\n성공회대학교 글로컬IT학과\nBook:DREAM Project\n201134031 최형근</string>
    <string name="department_notice_download">첨부파일이 없습니다.</string>
    <string name="department_notice">현재 네트워크가 불안정하거나 삭제된 게시판입니다.</string>
    <string name="department_notice_title">글로컬 IT 학과 정보 게시판</string>
    <string name="CLIENT_ID">MJH2cXLtz_lvhesMICpC</string>
    <string name="CLIENTSECRET">k7_YDv67QI</string>
    <string name="str_done">완료</string>
    <string name="map_show">지도 보기</string>
    <string name="add_recommend">추천 등록</string>
    <string name="recommend_search">추천 음식점 검색</string>
    <string name="category">카테고리</string>
    <string name="category_prompt">음식 카테고리를 선택하세요</string>
    <string name="name">이 름</string>
    <string name="name_hint">음식점 이름 입력</string>
    <string name="call">전화번호</string>
    <string name="call_hint">전화번호 입력</string>
    <string name="delivery">배달 가능</string>
    <string name="review">추천 리뷰</string>
    <string name="review_hint">추천 리뷰★  (선택)</string>
    <string name="addLocation">위치 추가</string>
    <string name="add">등록</string>
    <string name="add_condition">+ 조건추가</string>
    <string name="condition_reset">초기화</string>
    <string name="search">검색</string>
    <string name="auth">인증하기</string>
    <string name="freeboard_content">글을 작성해 주세요 (최대 100자)\n\n\n\n\n\n\n\n\n\n\n\n\n</string>
    <string name="search_error">검색결과가 없습니다</string>

</resources>
