<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_weight="2"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:layout_weight="1"
            android:textAlignment="center"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/category_sp"
            android:prompt="@string/category_prompt"
            android:layout_weight="4" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_weight="2"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_weight="1"
            android:textAlignment="center"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_textlayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_gravity="center">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/name_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/name_hint"
                android:textSize="17dp"
                android:inputType="text"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/MyTextInputLayoutErrorText"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_weight="2"
        android:weightSum="10">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/call"
            android:layout_weight="2"
            android:textAlignment="center"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/call_textlayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_gravity="center">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/call_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/call_hint"
                android:textSize="17dp"
                android:inputType="number"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/MyTextInputLayoutErrorText"/>
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/delivery_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/delivery" />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:id="@+id/review_edittext"
        android:background="@drawable/round"
        android:hint="@string/review_hint"
        android:textColorHint="@color/GRAY"
        android:layout_weight="2"
        android:textSize="15dp"
        android:padding="10dp"
        android:layout_margin="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/round_btn"
                    android:clickable="true"
                    android:id="@+id/addLocation_btn"
                    android:text="@string/addLocation"
                    android:textSize="15dp"
                    android:gravity="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/round_btn"
                    android:clickable="true"
                    android:id="@+id/addRecommend_btn"
                    android:text="@string/add"
                    android:textSize="15dp"
                    android:gravity="center"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>



</LinearLayout>