<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:weightSum="5"
        android:gravity="center_vertical">

        <TextView
            android:text="@string/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:textAlignment="center" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/title_sp"
            android:prompt="@string/title_prompt"
            android:layout_weight="4" />
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="50"
        android:id="@+id/edt_content"
        android:background="@drawable/round"
        android:hint="@string/demand_content"
        android:layout_weight="8"
        android:textSize="20dp"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:weightSum="7">

        <TextView
            android:text="@string/want_period"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_weight="2"
            android:textAlignment="center"
            android:layout_marginLeft="20dp" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/period_sp"
            android:prompt="@string/period_prompt"
            android:layout_weight="4" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=" 까지"
            android:textAlignment="center"
            android:layout_marginRight="20dp"/>
    </LinearLayout>

</LinearLayout>
