<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/condition_category"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_weight="2"
        android:weightSum="6">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:layout_weight="1"
            android:textAlignment="center"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/category_sp"
            android:prompt="@string/category_prompt"
            android:layout_weight="3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/add_condition_btn1"
            android:text="@string/add_condition"
            android:layout_weight="2"
            android:textAlignment="center"
            android:clickable="true"
            android:onClick="onClick_addCondition"
            android:background="@drawable/recommend_list_border"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/condition_name"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_weight="2"
        android:weightSum="6"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_weight="1"
            android:textAlignment="center"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_textlayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/name_edittext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/name_hint"
                android:textSize="17dp"
                android:inputType="text"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/MyTextInputLayoutErrorText"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/add_condition_btn2"
            android:text="@string/add_condition"
            android:layout_weight="2"
            android:textAlignment="center"
            android:background="@drawable/recommend_list_border"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/condition_delivery"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_weight="2"
        android:weightSum="10"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7" />

        <CheckBox
            android:id="@+id/delivery_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/delivery" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:weightSum="4">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/round_btn"
                    android:clickable="true"
                    android:id="@+id/conditionreset_btn"
                    android:text="@string/condition_reset"
                    android:textSize="15dp"
                    android:gravity="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/round_btn"
                    android:clickable="true"
                    android:id="@+id/search_btn"
                    android:text="@string/search"
                    android:textSize="15dp"
                    android:gravity="center"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>



</LinearLayout>