<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:weightSum="5"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_weight="1"
            android:gravity="center_horizontal" />
        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/writing_title"
            android:layout_weight="4"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/stateRadioBtn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2">

        <RadioButton
            android:id="@+id/radio_rent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/renting"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/radio_give"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:checked="false"
            android:gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/giving"
            android:textSize="20dp" />
    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:weightSum="3"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:layout_weight="1"
            android:gravity="center_horizontal" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/writing_grade"
            android:layout_weight="2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:layout_weight="3"
        android:weightSum="9"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:id="@+id/writting_image" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:weightSum="3.5">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/uploading"
                android:textColor="@color/WHITE"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_weight="1.5"
                android:background="@drawable/round_btn"
                android:clickable="true"
                android:gravity="center"
                android:id="@+id/image_upload"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginBottom="5dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/photo"
                android:textColor="@color/WHITE"
                android:layout_marginTop="3dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_weight="2"
                android:background="@drawable/round_btn"
                android:gravity="center"
                android:clickable="true"
                android:id="@+id/image_take"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
